--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "vault-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {},
+  "main": "src/index.js",
+  "scripts": {
+    "test": "webpack; cd dist; python -m SimpleHTTPServer"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10"
+  }
 }
