--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "webpack; cd dist; python -m SimpleHTTPServer"
+    "build-test": "webpack; openssl req -x509 -newkey rsa:4096 -nodes -keyout key.pem -out cert.pem -days 365 -subj \"/C=US/ST=./L=./O=./CN=.\"",
+    "test": "webpack; cd dist; http-server -p 8443 -S -K ../key.pem -C ../cert.pem -o"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "http-server": "^0.11.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10"
   }
