--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "vault-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Client API for Zippie Vault",
   "main": "src/index.js",
   "scripts": {
     "build-test": "webpack; openssl req -x509 -newkey rsa:4096 -nodes -keyout key.pem -out cert.pem -days 365 -subj \"/C=US/ST=./L=./O=./CN=.\"",
     "test": "webpack; cd dist; http-server -p 8443 -S -K ../key.pem -C ../cert.pem -o"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Zippie Ltd.",
+  "license": "BSD-3-Clause",
   "dependencies": {},
   "devDependencies": {
     "http-server": "^0.11.1",
