add button graphics, make tests print to browser window

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zippie/vault-api",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Client API for Zippie Vault",
   "main": "src/index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "BSD-3-Clause",
   "dependencies": {},
   "devDependencies": {
+    "callbag-html": "^0.1.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
