remove login cookie

--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "author": "Zippie Ltd.",
   "license": "BSD-3-Clause",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/zippie/vault-api.git"
+    "type": "git",
+    "url": "https://github.com/zippie/vault-api.git"
   },
   "scripts": {
     "test": "webpack; webpack-dev-server"
   },
-  "dependencies": {
-    "tiny-cookie": "^2.1.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "callbag-html": "^0.1.0",
     "webpack": "^4.0.1",
