--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/zippie/vault-api.git"
   },
   "scripts": {
+    "build": "WEBPACK_ENV=build webpack --config webpack.build.js",
     "test": "webpack-dev-server",
     "example": "webpack-dev-server --config webpack.example.js",
     "doc": "jsdoc --configure .jsdoc.json --verbose"
@@ -18,8 +19,15 @@
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "callbag-html": "^0.1.0",
     "chai": "^4.2.0",
+    "eslint": "^5.15.1",
+    "eslint-loader": "^2.1.2",
     "html-webpack-plugin": "^3.2.0",
     "jsdoc": "^3.5.5",
     "jsdoc-template": "github:zippiehq/jsdoc-template",
