--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zippie/vault-api",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Zippie Vault API",
   "main": "src/index.js",
   "author": "Zippie Ltd.",
@@ -12,6 +12,7 @@
   "scripts": {
     "build": "WEBPACK_ENV=build webpack --config webpack.build.js",
     "test": "webpack-dev-server",
+    "build-test": "webpack --config webpack.config.js",
     "example": "webpack-dev-server --config webpack.example.js",
     "doc": "jsdoc --configure .jsdoc.json --verbose"
   },
@@ -29,6 +30,7 @@
     "chai": "^4.2.0",
     "eslint": "^5.15.1",
     "eslint-loader": "^2.1.2",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "jsdoc": "^3.5.5",
     "jsdoc-template": "github:zippiehq/jsdoc-template",
